--- a/20201122/Project4/Project4/Project4.vcxproj
+++ b/20201122/Project4/Project4/Project4.vcxproj
@@ -11,7 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="zuoxuan.c" />
+    <ClCompile Include="dizengjuzhen.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{7945D369-6856-4B0D-AC3E-0897F3AFD501}</ProjectGuid>
