--- a/20201122/Project4/Project4/Project4.vcxproj.filters
+++ b/20201122/Project4/Project4/Project4.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="zuoxuan.c">
+    <ClCompile Include="dizengjuzhen.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
